# ChangeLog for net-analyzer/ssmping
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ssmping/ChangeLog,v 1.2 2006/10/15 12:26:25 tcort Exp $

  15 Oct 2006; Thomas Cort <tcort@gentoo.org> ssmping-0.9.ebuild:
  Added ~amd64 keyword wrt Bug #151438.

*ssmping-0.9 (08 Oct 2006)

  08 Oct 2006; Markus Ullmann <jokey@gentoo.org> +metadata.xml,
  +ssmping-0.9.ebuild:
  Initial commit, ebuild provided provided by upstream maintainer Stig Venaas
  in bug #119381 . He is happy to help out on bugs
