@@ -1,12 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ssmping-0.9.tar.gz 16464 RMD160 008c34fa9d3401c9763f9f4566e297975216ad1a SHA1 f3eee602d5c39e07e4d0382497b6b1cba88d59f3 SHA256 e9cde8a131800038b7e88d5a335fa08cf40d33f5b7db9bc5228a68c639f6adb9
+EBUILD ssmping-0.9-r1.ebuild 614 RMD160 2ce9a2b539d2d775f6c94e36dccb17e3d7ae2503 SHA1 7dab30a04130e0f07726fda287a5f0559cc0a632 SHA256 c12116a8d42623aba006cf6d097a2a278f5b88dff958d19639b8f67bff990ed2
+MD5 a899fd801263cebf5cbf30ec517b7ba9 ssmping-0.9-r1.ebuild 614
+RMD160 2ce9a2b539d2d775f6c94e36dccb17e3d7ae2503 ssmping-0.9-r1.ebuild 614
+SHA256 c12116a8d42623aba006cf6d097a2a278f5b88dff958d19639b8f67bff990ed2 ssmping-0.9-r1.ebuild 614
 EBUILD ssmping-0.9.ebuild 593 RMD160 05398007442a0c4fceb01f1efa622390efe4d73f SHA1 e6db5cce04da0ac44951c0cf2c532a8ee01cd625 SHA256 3ac21e91c6ced9b6b9c3d7b3546bc1d7a6e73a45db4c821c42c3a7fdf4833802
 MD5 386f66f3488dcb7a60acb3a5aef79128 ssmping-0.9.ebuild 593
 RMD160 05398007442a0c4fceb01f1efa622390efe4d73f ssmping-0.9.ebuild 593
 SHA256 3ac21e91c6ced9b6b9c3d7b3546bc1d7a6e73a45db4c821c42c3a7fdf4833802 ssmping-0.9.ebuild 593
-MISC ChangeLog 564 RMD160 3bbc105f5ab87c9fe44955e60b18bfd3c83f641e SHA1 a3fd19dc908a6e87e14babb829427d210d634a85 SHA256 ed327dd8ab2640271bd45ea73a901a7e2193227f3fd62bfa54dbbc87073d37b8
-MD5 bf60b4d28ce4c4ca2a53f13b3c7301d9 ChangeLog 564
-RMD160 3bbc105f5ab87c9fe44955e60b18bfd3c83f641e ChangeLog 564
-SHA256 ed327dd8ab2640271bd45ea73a901a7e2193227f3fd62bfa54dbbc87073d37b8 ChangeLog 564
+MISC ChangeLog 712 RMD160 5a8d4d38e33c8b9d06dec9659b6ea41bf39b7d3e SHA1 3692fa4dbc1a3bf8cd6ab09158caf3b4e5b98dfd SHA256 9d9c95c821ff234bdca7cdf3462d104c919f16ccd85a3afd70a9c0002df3f2f9
+MD5 f2a58623a57d51b74f23b2e86528af00 ChangeLog 712
+RMD160 5a8d4d38e33c8b9d06dec9659b6ea41bf39b7d3e ChangeLog 712
+SHA256 9d9c95c821ff234bdca7cdf3462d104c919f16ccd85a3afd70a9c0002df3f2f9 ChangeLog 712
 MISC metadata.xml 262 RMD160 09d4dd31b37701af68e2c3b4fe3baec59e6f28a2 SHA1 d2e89f72f9781b27f675a2882748afcf932aadb7 SHA256 d1c3c22b70db09f2616b01222070dbcdc9f4605b7595f396909e9a28ab83a26c
 MD5 44b45de5565b3f925dc6a51f4ecf20c7 metadata.xml 262
 RMD160 09d4dd31b37701af68e2c3b4fe3baec59e6f28a2 metadata.xml 262
@@ -14,3 +21,13 @@ SHA256 d1c3c22b70db09f2616b01222070dbcdc9f4605b7595f396909e9a28ab83a26c metadata
 MD5 770a043052a8e54d6661d3b7fbd236ac files/digest-ssmping-0.9 232
 RMD160 6c6be8506f8af91e044078726b87629b6f6ba281 files/digest-ssmping-0.9 232
 SHA256 1684748593d63a7865ae3c70af0f3081cfc4061102c1a078436017201d66d9d2 files/digest-ssmping-0.9 232
+MD5 770a043052a8e54d6661d3b7fbd236ac files/digest-ssmping-0.9-r1 232
+RMD160 6c6be8506f8af91e044078726b87629b6f6ba281 files/digest-ssmping-0.9-r1 232
+SHA256 1684748593d63a7865ae3c70af0f3081cfc4061102c1a078436017201d66d9d2 files/digest-ssmping-0.9-r1 232
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFGHe0uz974XjDVpbkRAiLPAJ4is0/9jgenxSKPt0NZYa/kBiWpIwCfeNUu
+E0x5fcr2AIDzuZ6sdIM4QWs=
+=Cw4i
+-----END PGP SIGNATURE-----
