@@ -1,0 +1,3 @@
+MD5 08350cba127b63ed7cdd662e7a0b37a1 ssmping-0.9.tar.gz 16464
+RMD160 008c34fa9d3401c9763f9f4566e297975216ad1a ssmping-0.9.tar.gz 16464
+SHA256 e9cde8a131800038b7e88d5a335fa08cf40d33f5b7db9bc5228a68c639f6adb9 ssmping-0.9.tar.gz 16464
